--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app",
+    "start": "node server",
     "dev": "nodemon index",
-    "test": "jest --detectOpenHandles --watchAll ./tests"
+    "test": "jest --forceExit --verbose --coverage --coverageDirectory ./test/*"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "got": "^11.8.2",
     "http-errors": "~1.6.3",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.0",
+    "really-need": "^1.9.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "jest": "^27.1.0",
