--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "jest --forceExit --verbose --coverage --coverageDirectory ./test/*"
   },
   "dependencies": {
+    "angular": "^1.6.9",
+    "angular-animate": "^1.6.9",
+    "angular-route": "^1.6.9",
     "bcryptjs": "^2.4.3",
     "braintree": "^3.7.0",
     "cookie-parser": "~1.4.4",
@@ -18,6 +21,7 @@
     "express": "~4.16.1",
     "got": "^11.8.2",
     "http-errors": "~1.6.3",
+    "jquery": "^1.12.4",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "mongoose": "^6.0.7",
