--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "really-need": "^1.9.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "jest": "^27.1.0",
