--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "jest --forceExit --verbose --coverage --coverageDirectory ./test/*"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^3.3.0",
+    "@truffle/hdwallet-provider": "^1.2.1",
     "angular": "^1.6.9",
     "angular-animate": "^1.6.9",
     "angular-route": "^1.6.9",
@@ -31,7 +33,10 @@
     "passport-jwt": "^4.0.0",
     "really-need": "^1.9.2",
     "request": "^2.88.2",
-    "xml": "^1.0.1"
+    "truffle": "^5.4.18",
+    "web3": "^1.3.0",
+    "xml": "^1.0.1",
+    "zksync-checkout": "0.0.11"
   },
   "devDependencies": {
     "jest": "^27.1.0",
